--- a/system_huellitas/views/admin/settings.html
+++ b/system_huellitas/views/admin/settings.html
@@ -47,7 +47,7 @@
                         <!-- Contenido de la sección de ajustes -->
                         <div class="container d-flex align-items-center justify-content-center">
                             <!-- Imagen del perfil -->
-                            <img class="picture rounded-circle" src="../../resources/img/png/rectangulo.png" id="imagen">
+                            <img class="picture rounded-circle" src="../../resources/img/png/rectangulo.png" id="imagen" width="180px" height="170px">
                         </div>
                         <br>
                         <div class="container text-center">
