--- a/system_huellitas/resources/css/admin/dashboard.css
+++ b/system_huellitas/resources/css/admin/dashboard.css
@@ -17,3 +17,11 @@
     background-color: rgb(238, 150, 75);
     color: white;
   }
+
+.table {
+    position: absolute;
+    top: 250px;
+    left: 245px;
+    width: 600px;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
+}
