--- a/system_huellitas/views/admin/scrud_clientes.html
+++ b/system_huellitas/views/admin/scrud_clientes.html
@@ -42,7 +42,7 @@
                 <div class="col-md-6 col-lg-6">
                     <!--Ocupamos el evento oninput para que cuando se detecte que se esta escribiendo en el input llame a la funcion searchhRow-->
                     <input class="form-control rounded-4 shadow bg-white" oninput="searchRow()" type="search"
-                           id="searchInput" name="search" placeholder="Buscar...">
+                        id="searchInput" name="search" placeholder="Buscar...">
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                     <div class="modal-body">
                         <form action="" id="seeForm">
                             <!-- Fila 1 -->
-                            <input type="text" class="form-control" name="idCliente" hidden="">
+                            <input type="text" class="form-control" id="idCliente" name="idCliente" hidden>
                             <div class="container text-center">
                                 <div class="row align-items-center justify-content-center">
                                     <div class="col-sm-12 col-md-auto">
@@ -127,12 +127,6 @@
                                                 name="direccionCliente" disabled>
                                         </div>
 
-                                        <div class="mb-3">
-                                            <label for="estadoCliente" class="form-label fw-semibold">Estado actual del
-                                                cliente</label>
-                                            <input type="text" class="form-control" id="estadoCliente"
-                                                name="estadoCliente" disabled>
-                                        </div>
                                     </div>
                                     <div class="col-sm-12 col-md-6 col-lg-6">
                                         <div class="mb-3">
@@ -163,14 +157,36 @@
 
                                 </div>
                             </div>
-                            <div class="container text-center mb-4 mt-4">
+
+                            <div class="container mb-4 mt-4 bg-beige-color p-4 rounded-3">
+                                <div class="row align-items-center">
+                                    <div class="col-6">
+                                        <label for="estadoCliente" class="form-label fw-semibold">Estado actual del
+                                            cliente</label>
+                                        <select class="form-select shadow" aria-label="Default select example"
+                                            id="estadoCliente" name="estadoCliente">
+                                            <option>Activo</option>
+                                            <option>Inactivo</option>
+                                        </select>
+                                        <div class="form-text mt-2" id="basic-addon4">Recuerda que puedes cambiar el estado de este cliente</div>
+                                    </div>
+                                    <div class="col-6">
+                                        <button type="submit" class="btn btn-red-color text-light me-3"
+                                            data-bs-dismiss="modal">Guardar</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="container text-center mb-4">
                                 <button type="button" class="btn btn-orange-color text-light me-3"
                                     data-bs-dismiss="modal">Regresar</button>
                             </div>
-                            </div>
-                    </form>
+                    </div>
+
                 </div>
+                </form>
             </div>
+        </div>
         </div>
     </main>
 
@@ -182,8 +198,7 @@
     <script type="text/javascript" src="../../controllers/utils/components.js"></script>
     <!-- Agregamos la ruta para agregar el menu -->
     <script type="text/javascript" src="../../controllers/utils/admin.js"></script>
-    <!-- Agregamos el controlador de la pagina web -->
-    <script type="text/javascript" src="../../controllers/admin/clientes.js"></script>
+    <!-- Agregamos el controlador de la pagina web -->    <script type="text/javascript" src="../../controllers/admin/clientes.js"></script>
 </body>
 
 </html>
