--- a/system_huellitas/views/admin/scrud_admin.html
+++ b/system_huellitas/views/admin/scrud_admin.html
@@ -113,8 +113,7 @@
                                     </div>
                                     <div class="col">
                                         <!-- Botón para cargar imagen -->
-                                        <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin" hidden
-                                            required>
+                                        <input type="file" class="form-control" id="imgAdmin" name="imagenAdmin" hidden>
                                         <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
                                         <label class="btn btn-red-color text-light " for="imgAdmin">Cargar
                                             imagen</label>
