--- a/system_huellitas/views/admin/scrud_productos.html
+++ b/system_huellitas/views/admin/scrud_productos.html
@@ -113,7 +113,7 @@
                                     </div>
                                     <div class="col">
                                         <!-- Botón para cargar imagen -->
-                                        <input type="file" class="form-control" id="imgProduct" name="imagenProducto" hidden required>
+                                        <input type="file" class="form-control" id="imgProduct" name="imagenProducto" hidden>
                                         <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
                                         <label class="btn btn-red-color text-light" for="imgProduct">Cargar imagen</label>
                                     </div>
