50% de srud de comentarios

--- a/system_huellitas/views/admin/scrud_comentarios.html
+++ b/system_huellitas/views/admin/scrud_comentarios.html
@@ -157,7 +157,7 @@
                                     <div class="container text-center">
                                         <button type="button" class="btn btn-orange-color text-white mx-3">
                                             Regresar</button>
-                                        <button type="button" class="btn btn-red-color text-white"> Ocultar</button>
+                                        <button type="submit" id="modalButton" class="btn btn-red-color text-white"> Ocultar</button>
                                     </div>
                                     <br>
                                 </div>
