Arregle una datos de admin

--- a/system_huellitas/views/admin/dashboard.html
+++ b/system_huellitas/views/admin/dashboard.html
@@ -70,7 +70,7 @@
                     </p>
                     <!-- Codigo para agregar el dropdown -->
                     <div class="col-4">
-                        <select class="form-select shadow bg-skin-color rounded-3" id="selectMenu" onchange="selectedOption()">
+                        <select class="col-sm-12 col-md-6" id="selectMenu" onchange="selectedOption()">
                             <option>Enero</option>
                             <option>Febrero</option>
                             <option>Marzo</option>
