--- a/system_huellitas/resources/css/admin/dashboard.css
+++ b/system_huellitas/resources/css/admin/dashboard.css
@@ -25,3 +25,31 @@
     width: 600px;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
 }
+
+select#selectMenu {
+    font-family: "Inter", sans-serif;
+    padding: 5px;
+    font-size: 16px;
+    color: #333;
+    background-color: #FAF0CA;
+    border: 1px solid #FAF0CA;
+    border-radius: 5px;
+}
+
+select#selectMenu:focus {
+    outline: none;  /* Remove default outline */
+    border-color: #E5D9AA;  /* Change border color on focus */
+}
+
+select#selectMenu::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 10px solid #ccc;  /* Arrow color */
+}
