Inicio de arreglar el problema de imagenes

--- a/system_huellitas/views/admin/scrud_marcas.html
+++ b/system_huellitas/views/admin/scrud_marcas.html
@@ -104,7 +104,7 @@
                                 <br>
                                 <div class="container text-center">
                                     <!-- Botón para cargar imagen -->
-                                    <input type="file" class="form-control" id="imagenMarca" name="imagenMarca" hidden required>
+                                    <input type="file" class="form-control" id="imagenMarca" name="imagenMarca" hidden>
                                     <!-- Para que tenga el mismo funcionamiento del input file le ponemos el for y le agregamos el id del input file -->
                                     <label class="btn btn-red-color text-light" for="imagenMarca">Cargar imagen</label>
                                 </div>
