--- a/system_huellitas/resources/css/admin/pagination_styles.css
+++ b/system_huellitas/resources/css/admin/pagination_styles.css
@@ -18,3 +18,10 @@
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
     border-radius: 10px;
 }
+
+.dataTables_filter input:focus{
+    background-color: white;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    border-radius: 10px;
+    border-color: #e5dada;
+}
